--- a/src/app/work/work.module.css
+++ b/src/app/work/work.module.css
@@ -1,6 +1,5 @@
 .main {
   min-height: 100vh;
-  transition: background-color 0.2s ease;
   background-color: white;
   color: black;
 }
@@ -12,65 +11,17 @@
   justify-content: center;
   padding: 2rem;
 }
-
-.contentColumn {
-  display: flex;
-  flex-direction: column;
-}
-
-.description {
-  font-size: 24px;
-  max-width: 900px;
-}
-
-.blue {
-  color: #2F00FF;
-  transition: color 0.2s ease;
-}
-
-.mainHovered .highlight {
-  color: white;
-}
-
-.linksHeader {
-  font-size: 24px;
-  margin-bottom: 2rem;
-  font-weight: normal;
-}
-
-.linksContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 4rem;
-  justify-content: center;
-}
-
-.linkColumn {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-
-.link {
-  color: #2F00FF;
-  text-decoration: underline;
-  font-size: 24px;
-  transition: color 0.2s ease;
-}
-
-.columnHeader {
-    font-weight: 100;
-}
-
+  
 
 @media (max-width: 768px) {
-    .description {
-      font-size: 36px;
-      padding: 0 1rem;
-    }
+  .video {
+    width: 100%;
+    height: auto;
   }
+}
   
-  @media (max-width: 380px) {
+
+@media (max-width: 380px) {
     .description {
       font-size: 32px;
     }
@@ -90,4 +41,12 @@
   .linksHeader {
     font-size: 36px;
   }
+} 
+
+.stacksRow {
+  display: flex;
+  gap: 20rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 } 
