--- a/src/app/work/work.module.css
+++ b/src/app/work/work.module.css
@@ -5,9 +5,9 @@
 }
 
 .container {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   padding: 2rem;
 }
@@ -45,8 +45,51 @@
 
 .stacksRow {
   display: flex;
-  gap: 20rem;
+  gap: 3rem;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: flex-start;
+  padding: 2rem;
+  padding-top: 18rem;
+}
+
+@media (max-width: 768px) {
+  .stacksRow {
+    padding-top: 3rem;
+  }
+}
+
+.projectContainer {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-} 
+  width: 300px;
+  margin-bottom: 2rem;
+}
+
+.stackContainer {
+  position: relative;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.projectInfo {
+  text-align: center;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+}
+
+.projectTitle {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin: 0;
+  color: #000;
+}
+
+.projectDescription {
+  font-size: 0.875rem;
+  color: #666;
+  margin: 0.25rem 0 0 0;
+  line-height: 1.4;
+}
