--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -26,6 +26,8 @@
 }
 
 .logo {
+  display: flex;
+  align-items: center;
   font-size: 24px;
   font-weight: 100;
   transition: color 0.2s ease;
@@ -149,4 +151,10 @@
   .cta {
     font-size: 24px;
   }
+}
+
+.headerIcon {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 8px;
 }
