--- a/src/app/work/work.module.css
+++ b/src/app/work/work.module.css
@@ -1,3 +1,4 @@
+/* Page Layout */
 .main {
   min-height: 100vh;
   background-color: white;
@@ -7,56 +8,20 @@
 .container {
   min-height: 100vh;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   padding: 2rem;
 }
-  
 
-@media (max-width: 768px) {
-  .video {
-    width: 100%;
-    height: auto;
-  }
-}
-  
-
-@media (max-width: 380px) {
-    .description {
-      font-size: 32px;
-    }
-  }
-  
-
-@media (max-width: 768px) {
-  .linksContainer {
-    flex-direction: column;
-    gap: 1rem;
-  }
-  
-  .link {
-    font-size: 36px;
-  }
-
-  .linksHeader {
-    font-size: 36px;
-  }
-} 
-
+/* Project Grid */
 .stacksRow {
   display: flex;
   gap: 3rem;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   padding: 2rem;
-  padding-top: 18rem;
-}
-
-@media (max-width: 768px) {
-  .stacksRow {
-    padding-top: 3rem;
-  }
+  margin-top: -6rem;
 }
 
 .projectContainer {
@@ -67,12 +32,7 @@
   margin-bottom: 2rem;
 }
 
-.stackContainer {
-  position: relative;
-  width: 100%;
-  margin-bottom: 1rem;
-}
-
+/* Project Info */
 .projectInfo {
   text-align: center;
   width: 100%;
@@ -87,9 +47,15 @@
   color: #000;
 }
 
-.projectDescription {
-  font-size: 0.875rem;
-  color: #666;
-  margin: 0.25rem 0 0 0;
-  line-height: 1.4;
+/* Mobile Adjustments */
+@media (max-width: 768px) {
+  .container {
+    align-items: flex-start;
+  }
+  
+  .stacksRow {
+    padding-top: 3rem;
+    margin-top: 0;
+    align-items: flex-start;
+  }
 }
